# airgap-guardian

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  inventory.toml
assets/: policy.toml  report.html  report2.html  report3.html  report4.html  test.html
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: analysis.rs  cli.rs  discover.rs  errors.rs  inventory.rs  main.rs  models.rs
src/policy/: config.rs  mod.rs  validation.rs
src/report/: html.rs  inventory.rs  json.rs  mod.rs  terminal.rs
src/scanner/: cert.rs  jwt.rs  mod.rs  secrets.rs  ssh.rs
testdata/: api.pem  bad.pem
testdata/nested/: ldap.crt  vpn.der
testdata/secrets/: config.env  token.txt
testdata/ssh/: authorized_keys  id_ed25519  id_rsa  known_hosts
